--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/tailwind": "^0.2.2",
     "@babel/core": "^7.18.6",
     "@babel/helper-validator-identifier": "7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/types": "^7.18.6",
     "astro": "^1.0.0-beta.64"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.2"
   }
 }
