--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@babel/helper-validator-identifier": "7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/types": "^7.18.6",
-    "astro": "^1.0.0-beta.64"
+    "astro": "^1.0.0-beta.64",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.1.1"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.2"
