chore: modularized everything; having issues with purgecss

--- a/package.json
+++ b/package.json
@@ -1,24 +1,11 @@
 {
-  "name": "astro-forms",
-  "version": "0.0.1",
   "private": true,
+  "name": "example-monorepo",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
-  },
-  "devDependencies": {
-    "@astrojs/tailwind": "^0.2.2",
-    "@babel/core": "^7.18.6",
-    "@babel/helper-validator-identifier": "7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "@babel/types": "^7.18.6",
-    "astro": "^1.0.0-beta.64",
-    "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.1.1"
-  },
-  "dependencies": {
-    "@tailwindcss/forms": "^0.5.2"
+    "dev": "yarn workspace demo dev",
+    "upload": "yarn workspace astro-forms publish"
   }
 }
