--- a/packages/astro-forms/package.json
+++ b/packages/astro-forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-forms",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Forms in Astro, made easy.",
   "main": "index.mjs",
   "homepage": "https://github.com/jackmerrill/astroforms#readme",
@@ -18,5 +18,8 @@
     "astro",
     "forms",
     "jsonform"
-  ]
+  ],
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.2"
+  }
 }
