--- a/packages/astro-forms/package.json
+++ b/packages/astro-forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-forms",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Forms in Astro, made easy.",
   "main": "index.mjs",
   "homepage": "https://github.com/jackmerrill/astroforms#readme",
@@ -20,6 +20,7 @@
     "jsonform"
   ],
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.2"
+    "@tailwindcss/forms": "^0.5.2",
+    "tailwindcss": "^3.1.5"
   }
 }
